Add keychain tests.

--- a/EkreativeSnacks.xcodeproj/xcshareddata/xcschemes/EkreativeSnacks.xcscheme
+++ b/EkreativeSnacks.xcodeproj/xcshareddata/xcschemes/EkreativeSnacks.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "78C61D642366EAB80005B5A7"
+               BuildableName = "EkreativeSnacksTests.xctest"
+               BlueprintName = "EkreativeSnacksTests"
+               ReferencedContainer = "container:EkreativeSnacks.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
