--- a/EkreativeSnacksTests/Info.plist
+++ b/EkreativeSnacksTests/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>APP_SERVER</key>
+	<string>https://8ebbd86f.ngrok.io</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -18,7 +20,5 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>APP_SERVER</key>
-	<string>https://virtserver.swaggerhub.com/fenix20113/ek-minitalks/1.0.0</string>
 </dict>
 </plist>
